removed all global variables

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "title": "Test Game",
-  "description": "Testing PUrposees ONLY",
+  "description": "Testing Purposes ONLY",
   "version": "1.0.0",
   "url": "https://example.com/",
   "scripts": {
