--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@babel/polyfill": "^7.0.0",
     "generator-phaser-plus": "^3.0.0-beta.7",
     "phaser": "^3.12.0",
-    "gulp": "^4.0.0"
+    "gulp": "^4.0.0",
+    "del": "^3.0.0"
   },
   "private": true
 }
